Make forwarded headers configurable via env var